@@ -1,6 +1,7 @@
 == Changelog ==
 = 1.0.0 - 2021-03-11 =
 
+* 2021-11-21 : fix bug payment form not compatible themes
 * 2021-10-17 : fix bug render html text
 * 2021-10-09 : fix bug installment channel
 * 2021-08-09 : fix bug remove some data on post meta
